# partial-isomorphisms-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
artifacts/: notes_toy_models_superposition.md
code/: README.md
datasets/: .gitignore  README.md
datasets/benchmarks/: representation_similarity.py
datasets/group_ops/: cyclic_113_meta.json  cyclic_13_meta.json  cyclic_2_meta.json  cyclic_59_meta.json  cyclic_5_meta.json  cyclic_97_meta.json  dihedral_10_meta.json  dihedral_6_meta.json  generate_group_ops.py  klein4_meta.json  quaternion_meta.json  symmetric_3_meta.json  symmetric_4_meta.json
datasets/othello/: generate_othello.py  meta.json
datasets/probing/: pythia_probing_guide.py
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_search_results/: partial_isomorphisms_neural_network_representations_20260320_160213.jsonl  representation_learning_concept_mapping_compression_deep_learning_20260320_160420.jsonl
papers/: README.md  paper_metadata.json
results/: concept_embeddings.npy  concept_list.json  experiment1_results.json  experiment2_results.json  experiment3_results.json
src/: experiment1_embedding_surprise.py  experiment2_analogical_reasoning.py  experiment3_activation_analysis.py  final_analysis.py  visualize_exp1.py
(+28 files in other folders)
