[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "numpy>=2.2.6",
    "openai>=2.29.0",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformer-lens>=2.15.4",
    "transformers>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
